Fix Navbar title not centred on safari

--- a/src/SimpleBet/Client/app/navbar/navbar.css
+++ b/src/SimpleBet/Client/app/navbar/navbar.css
@@ -6,11 +6,16 @@
 	width: 100%;
 	background-color: #9999ff;
 	z-index: 1000;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 #appNavbar h3 {
 	color: #FCFCFC;
 	font-weight: bold;
+	font-size: 30px;
+	margin: auto;
+	text-align: center;
 }
 
 #appNavbar img {
